--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -7,17 +7,21 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform Plan and Apply'
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Terraform
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.0  # Apne version ke hisaab se badal sakte ho
+          terraform_version: 1.6.0
 
       - name: Terraform Init
         run: terraform init
