--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   terraform:
-    runs-on: self-hosted-runner
+    runs-on: [self-hosted, self-hosted-runner1]
 
     steps:
       - name: Checkout code
